Makes ScreenPinningController clear map after removing observers

And makes WindowUserData erase from map before destroying data. The
former was how the code worked before I refactored it (see
https://codereview.chromium.org/2320273002/diff/160001/ash/wm/screen_pinning_controller.cc?context=&column_width=80&tab_spaces=8
). This moves the
clear back to where it originally was.

The change to WindowUserData is done so that if ~UserData calls back
to WindowUserData during destruction the map isn't in a weird state.

BUG=705727
TEST=covered by tests.
R=msw@chromium.org

Review-Url: https://codereview.chromium.org/2784603002
Cr-Commit-Position: refs/heads/master@{#460206}

Former-commit-id: 3a4ea7d396507cf516f8afb899aff72775f5d0d9